--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Description" content="言語を使わないアートによるコミュニケーション">
   <meta name="Keywords" content="アート,非言語コミュニケーション,卒業制作,">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
   <link rel="stylesheet" href="css/mycss.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/phone.css">
@@ -23,17 +24,28 @@
             <img src="images/logo_water2.png" alt="アートコミュニケーション" class="logo">
             <img src="images/logo3.svg" alt="アートコミュニケーション" class="logo_hidden">
         </div>
-        <a class="nextpage" href="#summary">アートでおはなししてみたい！</a>
+        <p class="top_title">アートコミュニケーション</p>
+        <a class="nextpage" href="#summary">なにそれ？</a>
     </header>
     <main>
       <div id="summary">
-        <nav>なにそれ？</nav>
-        <h2>「言語を使わない、アートによるコミュニケーション」</h2>
-        <p>ここでは、3ヶ月ほどに渡って行った「言語を使わないアートによるコミュニケーション」を記録として残しています。アートによる自己表現や、言語を使っての作品評価などはありますが、お互いがアートだけを使って会話するというのは珍しいのではないでしょうか。</p>
-        <h2>きっかけはコミュニケーションに対する疑問</h2>
-        <p>言語とは・コミュニケーションとは何だろう、言語がなくなれば私たちはどうするのだろう、アートは言語にとって変われるのか…という疑問からはじまりました。このサイトを見た方が、普段のコミュニケーションについてじっくり考えたり、アートを身近に感じてみたり、言語の必要性を改めて感じられる機会になれば良いなあと思います。最後に、この実験に協力してくださった11名の方、お忙しい中、本当にありがとうございました。</p>
-        <img src="images/boy.png" alt="言語を使わないアートコミュニケーション" class="boy">
+        <div class="left fuwat">
+          <div class="img_line"></div>
+          <h2>「言語を使わない、<br>アートによる<br>コミュニケーション」</h2>
+          <p>ここでは、3ヶ月ほどに渡って行った「言語を使わないアートによるコミュニケーション」を記録として残しています。11名の方に協力してもらい、アートだけを使ってSNSを利用して交流しました。アートによる自己表現や、言語を使っての作品評価などはありますが、お互いがアートだけを使って会話するというのは珍しいのではないでしょうか。</p>
+        </div>
+        <div class="right fuwat">
+          <div class="img_line"></div>
+          <h2 class="h-right">きっかけはコミュニケーションに<br>対する疑問</h2>
+          <p class="p_right">言語とは・コミュニケーションとは何だろう、言語がなくなれば私たちはどうするのだろう、アートは言語にとって変われるのか…という疑問からはじまりました。このサイトを見た方が、普段のコミュニケーションについてじっくり考えたり、アートを身近に感じてみたり、言語の必要性を改めて感じられる機会になれば良いなあと思います。<br>最後に、この実験に協力してくださった11名の方、本当にありがとうございました。</p>
+        </div>
+        <img src="images/summary1.svg" alt="言語コミュニケーション" class="img-right">
+        <img src="images/summary2.svg" alt="アートコミュニケーション" class="img-left">
+        <div class="img_arrow"></div>
       </div>
+      <a class="nextpage fuwat" href="#wrap">みんなの会話をのぞいてみる!
+        <div class="img_nextpage"></div>
+      </a>
       <div id="wrap">
         <h2 class="ttl">どっち？</h2>
         <a href="#content1" class="category1">
@@ -63,7 +75,7 @@
             <img src="images/content1.jpg" alt="私の作品" class="content1_img">
           </a>
 
-          <div id="letters">
+          <div id="letters" class="fuwat">
             <ul>
               <li class="letter1">
                 <a href="images/le_01.jpg" class="boxer" data-gallery="gallery_1" title="2016/10/05 17:34">
@@ -141,7 +153,7 @@
             <img src="images/group.png" alt="みんなで　わいわい" class="c_topimg">
             <p>大勢での会話は賑やかですね<br>
             どのお部屋にしますか</p>
-          <div id="doors">
+          <div id="doors" class="fuwat">
                 <button class="a">
                   <img src="images/door1_2.png" onmouseover="this.src='images/door1_open.png'" onmouseout="this.src='images/door1_2.png'" alt="部屋１" class="door">
                 </button>
