--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="Description" content="言語を使わないアートによるコミュニケーション">
   <meta name="Keywords" content="アート,非言語コミュニケーション,卒業制作,">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
   <link rel="stylesheet" href="css/mycss.css">
   <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/phone.css">
