--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
             </div>
             <div class="box3">
-            動画
+            to be continued...
             </div>
           </div>
           <hr noshade class="content_end">
