--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               </div>
             </div>
             <div class="box3">
-            to be continued...
+            To be continued...
             </div>
           </div>
           <hr noshade class="content_end">
